--- a/Ausarbeitung/Auswahl der Technologien/AdT_Programmiersprache_BFF.tex
+++ b/Ausarbeitung/Auswahl der Technologien/AdT_Programmiersprache_BFF.tex
@@ -68,7 +68,7 @@ Rust ist eine moderne, systemnahe Programmiersprache, die mit dem Ziel entwickel
 \subsection{Syntax und Struktur}
 Rust kombiniert eine moderne, präzise Syntax mit klarer Struktur. Die Sprache ist ausdrucksstark, stark typisiert und legt großen Wert auf Lesbarkeit und Sicherheit. Funktionen, Kontrollstrukturen und Fehlerbehandlung orientieren sich an funktionalen und systemnahen Paradigmen. Die Standardstruktur eines Rust-Programms besteht aus Funktionen, Modulen und typstarken Definitionen. Dabei ist der Einstieg einfach und direkt.
 
-\begin{lstlisting}[language=Rust]
+\begin{lstlisting}
 fn main() {
     println!("Hello, world!");
 }
