--- a/Ausarbeitung/Auswahl der Technologien/CSS.tex
+++ b/Ausarbeitung/Auswahl der Technologien/CSS.tex
@@ -22,7 +22,7 @@ Shadcn-Vue ist ein Community-getriebener Port der beliebten React-Bibliothek Sha
 Im Gegensatz zu anderen UI-Bibliotheken installiert Shadcn-Vue Komponenten selektiv. Dies f\"uhrt zu einer schlankeren Anwendung und erh\"oht die Kontrolle \"uber das Styling.
 
 \paragraph{Beispiele aus dem Projekt}
-Die Anwendung verwendet u.a. folgende Shadcn-Komponenten:
+Die Anwendung verwendet u.a. folgende Sha\-dcn-Kom\-po\-nen\-ten:
 \begin{itemize}
 	\item \texttt{Tabs}, \texttt{Cards}, \texttt{DropdownMenus} in der Pflanzen- und Sensordarstellung
 	\item \texttt{Switches} und \texttt{Tooltips} in der Detailansicht und den Einstellungen
