--- a/Ausarbeitung/Präamble/Eigenleistung.tex
+++ b/Ausarbeitung/Präamble/Eigenleistung.tex
@@ -6,8 +6,27 @@
 \end{center}
 \vspace{1em}
 \begin{center}
-    \textit{Hiermit erklären wir, dass wir die vorliegende Studienarbeit selbstständig und ohne fremde Hilfe verfasst haben. Wir habe keine anderen als die angegebenen Quellen und Hilfsmittel benutzt.}
+    \textit{Hiermit erklären wir, dass wir die vorliegende Studienarbeit selbstständig und ohne fremde Hilfe verfasst haben. Wir haben keine anderen als die angegebenen Quellen und Hilfsmittel benutzt. Darüber hinaus erklären wir, dass im Rahmen des Schreibprozesses KI-gestützte Werkzeuge (ChatGPT) zur Umformulierung von Textstellen verwendet wurden. Wir bestätigen hiermit, dass alle verwendeten Quellenangaben korrekt sind und die inhaltliche Verantwortung für die Arbeit uneingeschränkt bei uns liegt.}
 \end{center}
+
+\begin{tabular}{>{\centering\arraybackslash}p{0.5\textwidth} >{\centering\arraybackslash}p{0.5\textwidth}}
+  \includegraphics[height=2\baselineskip, keepaspectratio]{img/MS_Unterschrift.png}
+  &
+  \includegraphics[height=2\baselineskip, keepaspectratio]{img/FT_Unterschrift.png}
+  \\
+  Maximilian Schüller & Fynn Thierling \\
+  \includegraphics[height=2\baselineskip, keepaspectratio]{img/JS_Unterschrift.png}
+  &
+  \includegraphics[height=2\baselineskip, keepaspectratio]{img/LM_Unterschrift.jpg}
+  \\
+  Justus Siegert & Lukas Maier \\
+  \includegraphics[height=2\baselineskip, keepaspectratio]{img/Unterschrift_TK.jpg}
+  &
+  \\
+  Timon Kleinknecht & Mannheim, 15.04.2025
+\end{tabular}
+
+
 \vfill
 \hspace{0pt}
 \pagebreak
