--- a/Ausarbeitung/Präamble/abstract.tex
+++ b/Ausarbeitung/Präamble/abstract.tex
@@ -1,10 +1,10 @@
 % Abstract in English
-\section*{Abstract}
-\addcontentsline{toc}{section}{Abstract}
-
+\chapter*{Abstract}
+\addcontentsline{toc}{chapter}{Abstract}
+This study addresses the design and prototypical implementation of a smart irrigation solution for indoor environments. The objective of the work is to develop an automated system that accurately determines the water needs based on sensor data (e.g., soil moisture, temperature, humidity, and light intensity) and optimizes the watering process. As part of a proof-of-concept, the system integrates a microcontroller as the central control unit, a web-based backend infrastructure, and a user-friendly frontend for visualization and control. In addition to the technical implementation, the study explores modern IoT concepts, agile development methodologies, and the challenges of system integration. The proposed solution aims not only to achieve resource-efficient and demand-driven irrigation but also to contribute to sustainability and the enhancement of quality of life in urban residential settings.
 \newpage
 
 % Abstract in Deutsch
-\section*{Abstrakt}
-\addcontentsline{toc}{section}{Abstrakt}
-
+\chapter*{Abstrakt}
+\addcontentsline{toc}{chapter}{Abstrakt}
+Diese Studienarbeit befasst sich mit der Konzeption und prototypischen Umsetzung einer smarten Bewässerungslösung für den privaten Innenbereich. Ziel der Arbeit ist es, ein automatisiertes System zu entwickeln, das anhand von Sensordaten (z.B. Bodenfeuchte, Temperatur, Luftfeuchtigkeit und Lichtintensität) den Wasserbedarf präzise ermittelt und den Gießvorgang optimiert. Im Rahmen eines Proof-of-Concept werden ein Mikrocontroller als zentrale Steuereinheit, eine webbasierte Backend-Infrastruktur sowie ein benutzerfreundliches Frontend zur Visualisierung und Steuerung integriert. Neben der technischen Realisierung werden dabei unter anderem moderne IoT-Konzepte, agile Entwicklungsmethoden und die Herausforderungen der Systemintegration beleuchtet. Die vorgestellte Lösung soll nicht nur eine ressourcenschonende und bedarfsgerechte Bewässerung ermöglichen, sondern auch einen Beitrag zur Nachhaltigkeit und zur Steigerung der Lebensqualität in urbanen Wohnumfeldern leisten.
