--- a/Ausarbeitung/Theoretische Grundlagen/MobileApps.tex
+++ b/Ausarbeitung/Theoretische Grundlagen/MobileApps.tex
@@ -9,7 +9,7 @@ Grundsätzlich lassen sich vier Hauptkategorien unterscheiden:
 \begin{enumerate}
 	\item \textbf{Native Apps}: Sie werden spezifisch für ein Betriebssystem wie Android (in Kotlin/Java) oder iOS (in Swift/Objective-C) entwickelt. Sie bieten vollen Zugriff auf Systemfunktionen und gelten als performanteste Option \cite{Charland2011}.
 	\item \textbf{Webanwendungen}: Sie laufen in einem Browser, basieren auf HTML, CSS und JavaScript und sind betriebssystemunabhängig. Sie müssen nicht installiert werden und sind über URLs zugänglich.
-	\item \textbf{Hybride Apps}: Diese kombinieren Webtechnologien mit nativen Container-Komponenten (z.\,B. Cordova oder Capacitor). Sie werden einmal entwickelt und können in mehreren App Stores publiziert werden \cite{Charland2011}.
+	\item \textbf{Hybride Apps}: Diese kombinieren Webtechnologien mit nativen Con\-tai\-ner-Kom\-po\-nen\-ten (z.\,B. Cordova oder Capacitor). Sie werden einmal entwickelt und können in mehreren App Stores publiziert werden \cite{Charland2011}.
 	\item \textbf{Cross-Platform-Apps}: Hierbei wird der Quellcode in einer plattformübergreifenden Sprache geschrieben (z.\,B. Dart bei Flutter oder JavaScript bei React Native) und nativ kompiliert. Ziel ist ein natives Look-and-Feel bei reduzierter Entwicklungszeit \cite{Mahendra2021}.
 \end{enumerate}
 
