--- a/Ausarbeitung/Theoretische Grundlagen/Testing.tex
+++ b/Ausarbeitung/Theoretische Grundlagen/Testing.tex
@@ -1,4 +1,4 @@
-\section{Theoretische Grundlagen des Softwaretestens mit Fokus auf Frontend-Frameworks}
+\section{Softwaretestens mit Fokus auf Frontend-Frameworks}
 \label{sec:testing-theorie}
 
 Das Testen von Software stellt einen fundamentalen Bestandteil des Entwicklungsprozesses dar. Es dient der systematischen Qualitätssicherung und verfolgt das Ziel, Fehler frühzeitig zu identifizieren, Korrektheit zu überprüfen und die Wartbarkeit des Codes zu erhöhen. Insbesondere im Kontext moderner, komponentenbasierter Frontend-Frameworks wie Vue.js nimmt das Testen eine zentrale Rolle ein, um das dynamische Verhalten von Benutzeroberflächen valide zu verifizieren.
