--- a/Ausarbeitung/Umsetzung/Ums_Datenmodellierung und Datenfluss.tex
+++ b/Ausarbeitung/Umsetzung/Ums_Datenmodellierung und Datenfluss.tex
@@ -1,13 +1,14 @@
 \section{Beschreibung des Datenbankaufbaus}
 Die Datenbank des Systems Sensora ist im Schema sensora organisiert und verfolgt eine klar strukturierte, relationale Modellierung mit durchdachter Referentialität und Typisierung. Sie unterstützt die zentralen Funktionen des Systems wie Benutzerverwaltung, Gruppenzugehörigkeit, Raum- und Pflanzenzuordnung sowie Sensor- und Steuerdaten.
-
-\begin{figure}[h]
+\newpage
+\begin{figure}[H]
 \centering
 %  \includesvg[width=\linewidth, height=0.9\textheight, keepaspectratio,inkscapelatex=false]{img/Datenbank Diagramm.svg}
   \includegraphics[width=\linewidth, height=0.9\textheight]{img/Datenbank Diagramm.png}
 \caption{Sensora Datenbank Struktur}
 \label{fig:sensora_datenbank}
 \end{figure}
+\newpage
 
 \subsection{Struktur und Besonderheiten}
 \begin{description}
