--- a/Ausarbeitung/Umsetzung/UmsetzungSchnittstellenservices.tex
+++ b/Ausarbeitung/Umsetzung/UmsetzungSchnittstellenservices.tex
@@ -50,7 +50,7 @@ Der Mail-Service verfügt über zwei wesentliche Endpoints: einen POST-Endpoint 
 \begin{enumerate}
     \item Anfrage zur Verifikation (POST /verify): Diese Schnittstelle wird vom übergeordneten System (z.B. dem Web-Frontend oder einem anderen Service) aufgerufen, sobald ein Benutzer eine Registrierung abgeschlossen hat oder eine E-Mail-Bestätigung angefordert wird. Der Request enthält typischerweise den Benutzernamen und die E-Mail-Adresse des Kontos. Zusätzlich erwartet der Service einen geheimen Schlüssel (key), der mitgeschickt wird. Dieser PSK (Mailservice) ist eine einfache Sicherungsmaßnahme, damit nur autorisierte Systeme (etwa das Frontend-Servermodul) den Versand von Verifizierungs-Mails auslösen können – damit wird verhindert, dass Unbefugte massenhaft Verifikations-E-Mails über die öffentliche API triggern. Der Service prüft also zuerst, ob der mitgesandte Schlüssel mit dem in den Umgebungsvariablen hinterlegten Wert (MAILSERVICE\_PSK) übereinstimmt. Ist dies nicht der Fall, wird mit HTTP 403 abgebrochen.
     Ist die Anfrage autorisiert, wird die angegebene Kombination aus username und mail in der Datenbank gesucht (SELECT * FROM sensora.users WHERE username=\%s AND mail=\%s). Nur wenn ein entsprechender Benutzeraccount existiert und noch als inaktiv markiert ist (dies wird indirekt geprüft, indem z.B. ein Feld active in der DB auf FALSE stehen sollte – im Code wird bei Nichtexistenz direkt 404 gemeldet), wird der Verifikationsprozess fortgesetzt. Im nächsten Schritt erzeugt der Service ein zufälliges Token als einmaligen Bestätigungscode. Hierzu wird Python secrets.token\_urlsafe(16) verwendet\cite{pythonSecrets}, was einen ~22 Zeichen langen kryptographisch sicheren String liefert. Das Token wird in einer in-memory Datenstruktur (tokens Dictionary) unter dem Schlüssel des Benutzernamens gespeichert. Anschließend wird ein Bestätigungslink erstellt, der die URL des Confirmation-Endpoints enthält (inkl. Pfadparameter für Username und Token). Dieser Link hat z.B. die Form: https://meinserver/confirm/alice/AbCdEfGh... – er enthält also das geheime Token.
-    Nun versendet der Mail-Service eine E-Mail an die Adresse des Nutzers. Dafür wird ein SMTP-Server (hier Gmail SMTP auf Port 587) verwendet. Über Pythons smtplibwird eine TLS-geschützte Verbindung aufgebaut, der Mailaccount authentifiziert (SMTP-User und Passwort liegen in den Settings) und dann eine Textnachricht verschickt. Der E-Mail-Inhalt besteht aus einem kurzen Text mit der Aufforderung, den Link anzuklicken, um die Registrierung abzuschließen. Absender und Betreff sind entsprechend gesetzt (z.B. "Bitte bestätige deine E-Mail"). Nach erfolgreichem Versand gibt der/verify-Endpoint eine Erfolgsmeldung zurück ({"message": "Verification email sent."}mit HTTP 200). Fehlerfälle:
+    Nun versendet der Mail-Service eine E-Mail an die Adresse des Nutzers. Dafür wird ein SMTP-Server (hier Gmail SMTP auf Port 587) verwendet. Über Pythons smtplibwird eine TLS-geschützte Verbindung aufgebaut, der Mailaccount authentifiziert (SMTP-User und Passwort liegen in den Settings) und dann eine Textnachricht verschickt. Der E-Mail-Inhalt besteht aus einem kurzen Text mit der Aufforderung, den Link anzuklicken, um die Registrierung abzuschließen. Absender und Betreff sind entsprechend gesetzt (z.B. "Bitte bestätige deine E-Mail"). Nach erfolgreichem Versand gibt der/verify-Endpoint eine Erfolgsmeldung zurück (\{"message": "Verification email sent."\} mit HTTP 200). Fehlerfälle:
     Wenn die E-Mail-Adresse nicht existiert oder der DB-Zugriff fehlschlägt, wird ein HTTP 404 bzw. 500 zurückgegeben. Ein falscher PSK führt zu 403. Falls der SMTP-Versand scheitert (Exception), wird diese von FastAPI als Serverfehler zurück an den Aufrufer propagiert – in einer robusteren Version könnte man hier spezifisch mitHTTPException` antworten, doch im gegebenen Code wird auf die eingebaute Exception-Behandlung vertraut.
     \item Bestätigungsaufruf (GET /confirm/{username}/{token}): Diese Route wird aufgerufen, wenn der Benutzer den Link in der Verifikationsmail anklickt. In einem üblichen Web-Anwendungsfluss würde dieser Link z.B. zu einer Erfolgsmeldungsseite führen. Der Mail-Service übernimmt hier im Hintergrund die Aktivierung des Benutzerkontos. Er prüft zunächst, ob zum gegebenen username ein Token in seinem Zwischenspeicher vorliegt und ob es mit dem übermittelten Token übereinstimmt. Ist das Token falsch oder nicht (mehr) vorhanden, wird eine HTTP 400 Fehlermeldung erzeugt ("Invalid or expired token."). Dies deckt sowohl falsch manipulierte URLs als auch abgelaufene Tokens ab – letzteres, weil der Service das Token nach Gebrauch löscht oder nach einem Neustart vergisst (siehe weiter unten). Wenn das Token stimmt, wird mittels Datenbank-Update das Benutzerkonto aktiviert (UPDATE sensora.users SET active = TRUE WHERE username = ...). Danach entfernt der Service den genutzten Token aus seinem tokens-Dictionary (damit der Link nicht erneut verwendet werden kann, One-Time Use). Schließlich liefert der Endpoint eine einfache HTML-Antwort zurück, die dem Nutzer bestätigt, dass die E-Mail erfolgreich verifiziert wurde (im Code: Rückgabe eines kleinen <h1>-HTML mit Erfolgstext). Dieses HTML wird durch FastAPI mithilfe der HTMLResponse direkt ausgegeben – so sieht der Nutzer unmittelbar im Browser eine Bestätigung.
 \end{enumerate}
@@ -109,7 +109,7 @@ Der Setpoint-Service stellt den Endpoint /sollwert (HTTP POST) bereit. Der typis
     Diese Struktur ist angelehnt an das Format, das ggf. vom Gerät erwartet wird (eine Liste von Zielwerten für bestimmte Sensoren/Aktoren). Es wird also der Device-ID und Sensor-ID nochmals eingebettet, damit das Gerät die Nachricht zuordnen kann.
     \item Als nächstes bestimmt der Service das Ziel-Topic für die MQTT-Nachricht. Gemäß der in Auth-Service eingerichteten Konvention wird das Topic \\ sensora/v1/receive/<controller\_id>/targetValues genutzt. Darauf ist der betreffende Controller (bzw. dessen MQTT-Client) berechtigt zu lauschen. Dieses Topic adressiert somit genau den gewünschten Controller.
     \item Der Service publiziert die Nachricht über den Solace-Broker: Hierzu nutzt er die vorab aufgebaute Broker-Verbindung und einen Publisher, der als persistent message publisher initialisiert wurde. Die Nachricht wird mit dem oben genannten Topic abgesendet. Der Broker sorgt dann dafür, dass – sofern der Controller online ist und das Topic abonniert hat – die Nachricht an diesen zugestellt wird. Sollte der Controller momentan nicht verbunden sein, greift je nach Broker-Einstellung die Persistierung: Entweder wurde eine Queue für solche Sollwert-Nachrichten eingerichtet (vgl. mögliches sensor\_setpoints Queue), oder im MQTT-Kontext übernimmt der Broker das Speichern bei QoS>0. Da der Publisher hier als "persistent" konfiguriert ist, lässt sich ableiten, dass die Nachricht als durable versendet wird, was in MQTT-Terminologie etwa QoS 1 entspricht (mindestens einmal zustellen). Solace bietet für MQTT-Clients mit dauerhafter Session auch an, solche Nachrichten zwischenzuspeichern, was vermutlich hier genutzt wird.
-    \item Die Setpoint API gibt dem HTTP-Aufrufer eine Erfolgsmeldung zurück (HTTP 200, JSON {"status": "success"}). Damit ist der Vorgang für den Benutzer abgeschlossen. Im Hintergrund allerdings wird nun der Controller die Nachricht empfangen und z.B. seine Konfiguration anpassen (dies ist Teil der Geräte-Firmware und außerhalb dieses Service-Scopes, aber essentiell für den Regelkreis der Bewässerung).
+    \item Die Setpoint API gibt dem HTTP-Aufrufer eine Erfolgsmeldung zurück (HTTP 200, JSON \{"status": "success"\}). Damit ist der Vorgang für den Benutzer abgeschlossen. Im Hintergrund allerdings wird nun der Controller die Nachricht empfangen und z.B. seine Konfiguration anpassen (dies ist Teil der Geräte-Firmware und außerhalb dieses Service-Scopes, aber essentiell für den Regelkreis der Bewässerung).
 \end{enumerate}
 
 \section{Solace Init: Automatisierte Broker-Konfiguration}
@@ -153,7 +153,7 @@ Solace Init ist als eigenständiges Python-Skript (init.py) konzipiert, das beim
         \item 409 (Conflict) bedeutet, die Queue existiert bereits – in diesem Fall loggt das Skript eine Warnung, fährt aber fort. Das ist gewollt, um Idempotenz zu erreichen: Sollte man Solace Init versehentlich zweimal ausführen oder den Broker bereits vorkonfiguriert haben, bricht es nicht ab, sondern erkennt vorhandene Entities.
         \item Andere Fehlercode führt zu einem Fehlerausdruck und Rückkehr aus der Funktion (somit würde die Subscription-Anlage für diese Queue übersprungen).
     \end{enumerate}
-    \item Hinzufügen von Topic-Subscriptions: Nach dem Anlegen (oder Erkennen) der Queue iteriert das Skript über alle vorgesehenen Subscription-Themen und sendet für jedes ein POST .../queues/{queueName}/subscriptions mit {"subscriptionTopic": "<topic>"}. Hier gelten ähnliche Statuscodes:
+    \item Hinzufügen von Topic-Subscriptions: Nach dem Anlegen (oder Erkennen) der Queue iteriert das Skript über alle vorgesehenen Subscription-Themen und sendet für jedes ein POST .../queues/\{queueName\}/subscriptions mit \{\grqq subscriptionTopic\grqq{}: \grqq <topic>\grqq \}. Hier gelten ähnliche Statuscodes:
     \begin{enumerate}
         \item 200/201: Subscription hinzugefügt (Logausgabe),
         \item 409: bereits vorhanden (Warnhinweis, aber kein Abbruch),
