--- a/Ausarbeitung/acronyms.tex
+++ b/Ausarbeitung/acronyms.tex
@@ -185,3 +185,52 @@
   long  = Internationalisierung
 }
 
+\DeclareAcronym{acl}{
+  short = ACL,
+  long  = Access Control List
+}
+
+\DeclareAcronym{psk}{
+  short = PSK,
+  long  = Pre-Shared Key
+}
+
+\DeclareAcronym{hmac}{
+  short = HMAC,
+  long  = Hash-based Message Authentication Code
+}
+
+\DeclareAcronym{smtp}{
+  short = SMTP,
+  long  = Simple Mail Transfer Protocol
+}
+
+\DeclareAcronym{sid}{
+  short = SID,
+  long  = Sensor Identifier
+}
+
+\DeclareAcronym{vid}{
+  short = VID,
+  long  = Value Identifier
+}
+
+\DeclareAcronym{uid}{
+  short = UID,
+  long  = User Identifier
+}
+
+\DeclareAcronym{iot}{
+  short = IoT,
+  long  = Internet of Things
+}
+
+\DeclareAcronym{semp}{
+  short = SEMP,
+  long  = Solace Element Management Protocol
+}
+
+\DeclareAcronym{ack}{
+  short = ACK,
+  long  = Acknowledgment
+}
