--- a/Ausarbeitung/listings-golang.sty
+++ b/Ausarbeitung/listings-golang.sty
@@ -13,13 +13,13 @@
    morekeywords=[5]{Println,Printf,Error,Print,},%
    sensitive=true,%
    morecomment=[l]{//},%
-   commentstyle=\color{codegreen}\ttfamily, % Kommentarfarbe anpassen
+   commentstyle=\color{green}\ttfamily, % Kommentarfarbe anpassen
    morecomment=[s]{/*}{*/},%
    morestring=[b]',%
    morestring=[b]",%
    morestring=[s]{`}{`},%
    keywordstyle=\color{magenta}\bfseries, % Schlüsselwortfarbe anpassen
-   stringstyle=\color{codepurple}\ttfamily, % Stringfarbe anpassen
+   stringstyle=\color{purple}\ttfamily, % Stringfarbe anpassen
    basicstyle=\ttfamily\footnotesize, % Basisstil anpassen
 }
 
