--- a/Ausarbeitung/literatur.bib
+++ b/Ausarbeitung/literatur.bib
@@ -20,6 +20,39 @@
 	networks;routing algorithm.;tree}
 }
 
+@book{newman2021building,
+  title={Building Microservices: Designing Fine-grained Systems},
+  author={Newman, S.},
+  isbn={9781492034025},
+  lccn={2021276967},
+  url={https://books.google.de/books?id=MTClswEACAAJ},
+  year={2021},
+  publisher={O'Reilly}
+}
+
+@Inbook{Dragoni2017,
+author="Dragoni, Nicola
+and Giallorenzo, Saverio
+and Lafuente, Alberto Lluch
+and Mazzara, Manuel
+and Montesi, Fabrizio
+and Mustafin, Ruslan
+and Safina, Larisa",
+editor="Mazzara, Manuel
+and Meyer, Bertrand",
+title="Microservices: Yesterday, Today, and Tomorrow",
+bookTitle="Present and Ulterior Software Engineering",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="195--216",
+abstract="Microservices is an architectural style inspired by service-oriented computing that has recently started gaining popularity. Before presenting the current state of the art in the field, this chapter reviews the history of software architecture, the reasons that led to the diffusion of objects and services first, and microservices later. Finally, open problems and future challenges are introduced. This survey primarily addresses newcomers to the discipline, while offering an academic viewpoint on the topic. In addition, we investigate some practical issues and point out a few potential solutions.",
+isbn="978-3-319-67425-4",
+doi="10.1007/978-3-319-67425-4_12",
+url="https://doi.org/10.1007/978-3-319-67425-4_12"
+}
+
+
 
 @online{1,
 	author       = {o. V.},
@@ -1003,7 +1036,7 @@
 	ADDRESS = {Bonn},
 }
 
-@BOOK{Fröhlich2022,
+@BOOK{Froehlich2022,
 	AUTHOR = {Fröhlich, Lutz},
 	YEAR = {2022},
 	TITLE = {PostgreSQL - Praxisbuch für Administratoren und Entwickler},
@@ -1235,4 +1268,505 @@
   isbn      = {978-3-98871-003-1},
   date = {2024-03-16},
   url       = {https://rust-lang-de.github.io/rustbook-de/title-page.html},
+}
+
+@online{gabot_artikel,
+  author    = {Andreas Löbke},
+  title     = {Marktbericht: Pandemie treibt Nachfrage nach Grün},
+  year      = {2022},
+  url       = {https://www.gabot.de/ansicht/marktbericht-pandemie-treibt-nachfrage-nach-gruen-414635},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@ARTICLE{water_savings,
+author = {Cardenas, Bernard and Dukes, Michael and Miller, Grady},
+year = {2010},
+month = {03},
+pages = {},
+title = {Sensor-Based Automation of Irrigation on Bermudagrass during Dry Weather Conditions},
+volume = {136},
+journal = {Journal of Irrigation and Drainage Engineering-asce - J IRRIG DRAIN ENG-ASCE},
+doi = {10.1061/(ASCE)IR.1943-4774.0000153}
+}
+
+@ARTICLE{pflanzenbesitz_de,
+  author    = {Mieterzeitung},
+  title     = {Grünes Zuhause},
+  year      = {2022},
+  url       = {https://www.mieterzeitung.de/ausgabe-1-2022/statistiken.html},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{pflanzenpflege_fehler,
+  author    = {feey AG},
+  title     = {Pflanzenblog - Juni 2021},
+  year      = {2023},
+  url       = {https://www.statista.com/statistics/1300299/how-many-indoor-plants-us-gardeners-kill-annually/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{pflanzensterben_statistik,
+  author    = {Home Advisor},
+  title     = {Gardening Expectations vs. Reality Survey},
+  year      = {2021},
+  url       = {https://www.homeadvisor.com/r/gardening-expectations-vs-reality-survey/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{pflanzensterben_statistik_2,
+  author    = {Statista},
+  title     = {How many indoor plants non-expert gardeners in the United States kill in a year},
+  year      = {2021},
+  url       = {https://www.statista.com/statistics/1300299/how-many-indoor-plants-us-gardeners-kill-annually},
+  urldate   = {2025-05-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{pflanzensterben_statistik_3,
+  author    = {Katie Mayers},
+  title     = {Houseplant Statistics in 2024 (incl. Covid \& Millennials)},
+  year      = {2022},
+  url       = {https://gardenpals.com/houseplant-statistics/},
+  urldate   = {2025-05-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{smart_gardening,
+  author    = {Eva Dorothee Schmid},
+  title     = {Deutschland, deine Gärten: Spannende Zahlen und Fakten},
+  year      = {2024},
+  url       = {https://wohnglueck.de/artikel/gaerten-in-deutschland-zahlen-36505},
+  urldate   = {2025-05-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{urbanisierung_de,
+  author    = {Statista},
+  title     = {Germany: Urbanization from 2013 to 2023},
+  year      = {2025},
+  url       = {https://www.statista.com/statistics/455825/urbanization-in-germany},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{gardena,
+  author    = {Gardena},
+  title     = {GARDENA Studienpräsentation 2022: Nachhaltige Lösungen und technologischer Fortschritt im Garten helfen gegen den Klimawandel},
+  year      = {2022},
+  url       = {https://www.media-gardena.com/news-gardena-studienpraesentation-2022-nachhaltige-loesungen-und-technologischer-fortschritt-im-garten-helfen-gegen-den-klimawandel?id=150284},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{iot_trend,
+  author    = {markemarketsandmarkets},
+  title     = {European Smart Homes Market Size, Share \& Growth},
+  year      = {2025},
+  url       = {https://www.marketsandmarkets.com/Market-Reports/european-smart-homes-market-1290.html},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{Microcontroller_vs_Microprocessor,
+  author    = {Totalphase},
+  title     = {Microcontroller vs Microprocessor - What are the Differences?},
+  year      = {2019},
+  url       = {https://www.totalphase.com/blog/2019/12/microcontroller-vs-microprocessor-what-are-the-differences/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{energiesparen,
+  author    = {Curatepartners},
+  title     = {Understanding Low Power Modes},
+  year      = {2024},
+  url       = {https://curatepartners.com/blogs/skills-tools-platforms/understanding-low-power-modes-enhancing-energy-efficiency-in-modern-electronics},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{echtzeit_grundlagen,
+  author    = {Prof. Dr. Christian Siemers},
+  title     = {Echtzeit: Grundlagen von Echtzeitsystemen},
+  year      = {2017},
+  url       = {https://www.embedded-software-engineering.de/echtzeit-grundlagen-von-echtzeitsystemen-a-5897f8abe8f52370ee04a724b23339f8/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{echtzeit_grundlagen_2,
+  author    = {Prof. Dr. Alois Knoll},
+  title     = {Echtzeitsysteme},
+  year      = {2012},
+  url       = {https://archive.air.in.tum.de/pub/Main/TeachingWs2012Echtzeitsysteme/1_einfuehrung.pdf},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@book{SoC,
+  title     = {System-on-a-Chip},
+  author    = {Bashir M. Al-Hashimi},
+  year      = {2006},
+  publisher = {Institution of Engineering and Technology},
+  ISBN       = {978-0-86341-552-4},
+}
+
+@online{IoT,
+  author    = {IETF},
+  title     = {The Internet of Things},
+  year      = {},
+  url       = {https://www.ietf.org/technologies/iot/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{IoT_http,
+  author    = {jawaharlal-nehru-technological-university-hyderabad},
+  title     = {Internet of Things},
+  year      = {},
+  url       = {https://www.studocu.com/in/document/jawaharlal-nehru-technological-university-hyderabad/internet-of-things/iotcpa-question-bank/114791708},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{IoT_mqtt,
+  author    = {Ian Craggs},
+  title     = {MQTT Vs CoAP for IoT},
+  year      = {2022},
+  url       = {https://www.hivemq.com/blog/mqtt-vs-coap-for-iot/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@ARTICLE{edge_fog_cloud,
+  author    = {Fernando, Niroshinie and Samir Shrestha and Seng W. Loke and Kevin Lee},
+  title     = {On Edge-Fog-Cloud Collaboration and Reaping Its Benefits: A Heterogeneous Multi-Tier Edge Computing Architecture},
+  year      = {2025},
+  journal   = {Future Internet},
+  volume    = {17},
+  number    = {1},
+  pages     = {},
+  doi       = {10.3390fi17010022}
+}
+
+@online{cloudflare,
+  author    = {cloudflare},
+  title     = {Was ist IoT-Sicherheit?},
+  year      = {},
+  url       = {https://www.cloudflare.com/de-de/learning/security/glossary/iot-security/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{proofpoint,
+  author    = {proofpoint},
+  title     = {Was ist IoT-Security?},
+  year      = {},
+  url       = {https://www.proofpoint.com/de/threat-reference/iot-security},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{moocit,
+  author    = {moocit},
+  title     = {IoT Security: The Ultimate Guide},
+  year      = {2024},
+  url       = {https://moocit.de/index.php/Technik_-_Steuern_und_Regeln},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{haustechnik,
+  author    = {haustechnik},
+  title     = {Der Unterschied zwischen Steuerung und Regelung},
+  year      = {2024},
+  url       = {https://www.haustechnikverstehen.de/der-unterschied-zwischen-steuerung-und-regelung/},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{steuern_regeln,
+  author    = {Wikipedia},
+  title     = {Proportional integral derivative controller},
+  year      = {2025},
+  url       = {https://en.wikipedia.org/wiki/Proportional%E2%80%93integral%E2%80%93derivative_controller},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{steuern_regeln_2,
+  author    = {Wikipedia},
+  title     = {Regeler},
+  year      = {2025},
+  url       = {https://de.wikipedia.org/wiki/Regler},
+  urldate   = {2025-04-14},
+  note      = {Abgerufen am 14. April 2025}
+}
+
+@online{esp_datasheet,
+  author    = {espressif},
+  title     = {ESP32-WROOM-32D and ESP32-WROOM-32U Datasheet},
+  year      = {2025},
+  url       = {https://www.espressif.com/sites/default/files/documentation/esp32-wroom-32d_esp32-wroom-32u_datasheet_en.pdf},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@ARTICLE{esp32_comparison,
+  author    = {Yash Goyal},
+  title     = {Comparative Study of Microcontoller: ARDUINO UNO, RASPBERRY PI 4, ESP 32},
+  year      = {2024},
+  journal   = {International Journal for Research in Applied Science \& Engineering Technology},
+  volume    = {12},
+  number    = {7},
+  pages     = {588-592},
+  doi       = {10.22214/ijraset.2024.63598}
+}
+
+@online{esp_comparison_2,
+  author    = {Open Lab},
+  title     = {ESP32 vs. Arduino vs. Raspberry Pi Pico: Was ist besser?},
+  year      = {2024},
+  url       = {https://openelab.io/de/blogs/learn/esp32-vs-arduino-vs-raspberry-pi-pico-which-is-better?srsltid=AfmBOopiSmQCJDHVula3KxkMyYlBaO2SJEFFdnJZa3n7CBXCnnyUL6mN},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+
+}
+
+@online{atmega_datasheet,
+  author    = {Microchip Technology Inc.},
+  title     = { ATmega4808/4809 Data Sheet},
+  year      = {2021},
+  url       = {https://www.onlinecomponents.com/en/datasheet/atmega4809au-52119322/},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+
+}
+
+@InProceedings{greenhous_comparison,
+author="Didi, Zaidan
+and El Azami, Ikram",
+editor="Motahhir, Saad
+and Bossoufi, Badre",
+title="IoT, Comparative Study Between the Use of Arduino Uno, Esp32, and Raspberry pi in Greenhouses",
+booktitle="Digital Technologies and Applications",
+year="2022",
+publisher="Springer International Publishing",
+address="Cham",
+pages="718--726",
+isbn="978-3-031-02447-4"
+}
+
+@online{raspberry_pi_datasheet,
+  author    = {Raspberry Pi (Trading) Ltd},
+  title     = {Raspberry Pi 4 Model B Datasheet},
+  year      = {2024},
+  url       = {https://datasheets.raspberrypi.com/rpi4/raspberry-pi-4-datasheet.pdf},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{esp_nvs,
+  author    = {Industrial Shields},
+  title     = {How to use ESP32 NVS memory to store data permanently},
+  year      = {2023},
+  url       = {https://www.industrialshields.com/blog/arduino-industrial-1/how-to-use-esp32-nvs-memory-to-store-data-permanently-550},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{esp32_sleep,
+  author    = {Programming Electronics Academy},
+  title     = {A Practical Guide to ESP32 Deep Sleep Modes},
+  year      = {},
+  url       = {https://www.programmingelectronics.com/esp32-deep-sleep-mode},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{raspberry_pi_w_datasheet,
+  author    = {Raspberry Pi (Trading) Ltd},
+  title     = {Raspberry Pi Pico W Datasheet},
+  year      = {2024},
+  url       = {https://datasheets.raspberrypi.com/picow/pico-w-datasheet.pdf},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{esp_price,
+  author    = {DigiKey},
+  title     = {ESP32-WROOM-32-N4},
+  year      = {2025},
+  url       = {https://www.digikey.de/en/products/detail/espressif-systems/ESP32-WROOM-32-N4/8544298?srsltid=AfmBOopq_74Fcvap64CDj91WpsWYXsbfWneae9bHzyxsZiKKPapjkgz_},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{arduino_price,
+  author    = {Arduino Store},
+  title     = {Arduino Nano Every},
+  year      = {2025},
+  url       = {https://store.arduino.cc/en-de/products/arduino-nano-every?srsltid=AfmBOoo3nqOp1Nq7lZ4c09na8fh1I-NlE829_YLhGob5q99nfr8bXcif},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{raspberry_pi_price,
+  author    = {Wetterott},
+  title     = {Raspberry Pi 4 Modell B 4Gb RAM- 64Bit 1.5GHz Quad-Core ARM-Cortex-A72},
+  year      = {2025},
+  url       = {https://shop.watterott.com/Raspberry-Pi-4-Modell-B-4Gb-RAM-64Bit-15GHz-Quad-Core-ARM-Cortex-A72_1},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{raspberry_pi_availability,
+  author    = {ars Technica},
+  title     = {Raspberry Pi availability is visibly improving after years of shortages},
+  year      = {2025},
+  url       = {https://arstechnica.com/gadgets/2023/08/some-shops-will-let-you-buy-more-than-one-raspberry-pi-at-a-time-again/},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@online{raspberry_pi_w_price,
+  author    = {Rusell Barnes},
+  title     = {Introducing Raspberry Pi Zero W},
+  year      = {2017},
+  url       = {https://magazine.raspberrypi.com/articles/pi-zero-w},
+  urldate   = {2025-04-15},
+  note      = {Abgerufen am 15. April 2025}
+}
+
+@manual{espressif_idf,
+  title        = {ESP-IDF Programming Guide},
+  author       = {Espressif Systems},
+  organization = {Espressif Systems},
+  year         = {2024},
+  url          = {https://docs.espressif.com/projects/esp-idf},
+  note         = {Zugriff am 15.04.2025}
+}
+
+@manual{freertos_doc,
+  title        = {FreeRTOS Kernel Documentation},
+  author       = {Real Time Engineers Ltd.},
+  year         = {2024},
+  url          = {https://www.freertos.org/Documentation/RTOS_book.html},
+  note         = {Zugriff am 15.04.2025}
+}
+
+@misc{arduino_esp32,
+	author       = {Arduino and Espressif},
+	title        = {ESP32 Arduino Core GitHub Repository},
+	year         = {2024},
+	url          = {https://github.com/espressif/arduino-esp32},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@misc{platformio,
+	author       = {PlatformIO Labs},
+	title        = {PlatformIO Core Documentation},
+	year         = {2024},
+	url          = {https://docs.platformio.org},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@misc{micropython_docs,
+	author       = {MicroPython Community},
+	title        = {MicroPython für ESP32 – Dokumentation},
+	year         = {2024},
+	url          = {https://docs.micropython.org/en/latest/esp32/quickref.html},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{espressif_trm,
+	title        = {ESP32 Technical Reference Manual},
+	author       = {Espressif Systems},
+	year         = {2024},
+	url = {https://www.espressif.com/sites/default/files/documentation/esp32_technical_reference_manual_en.pdf},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@misc{adafruit_dht,
+	author       = {{Adafruit Industries}},
+	title        = {{DHT11 Temperature and Humidity Sensor Guide}},
+	year         = {2023},
+	url          = {https://learn.adafruit.com/dht},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{DFR0067_DHT11_Datasheet,
+	title        = {DHT11 Temperature and Humidity Sensor - Datasheet (DFR0067)},
+	author       = {{Aosong Electronics Co., Ltd.}},
+	year         = {2023},
+	url          = {https://www.aosong.com},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{bosch_bme280,
+	author       = {{Bosch Sensortec}},
+	title        = {{BME280 Combined Humidity and Pressure Sensor - Datasheet}},
+	year         = {2023},
+	url          = {https://www.bosch-sensortec.com/media/boschsensortec/downloads/datasheets/bst-bme280-ds002.pdf},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{bh1750_handsontec,
+	author       = {{Handson Technology}},
+	title        = {{BH1750 Light Sensor Module – Datasheet}},
+	year         = {2021},
+	url          = {https://www.handsontec.com/dataspecs/sensor/BH1750%20Light%20Sensor.pdf},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@misc{components101_soilmoisture,
+	author       = {{Components101}},
+	title        = {{Soil Moisture Sensor Module – Pinout, Features and Specifications}},
+	year         = {2020},
+	url          = {https://components101.com/modules/soil-moisture-sensor-module},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@online{espboards_idf_arduino,
+	author    = {{ESPBoards.dev}},
+	title     = {ESP-IDF vs Arduino Core in 2023},
+	year      = {2023},
+	url       = {https://www.espboards.dev/blog/esp-idf-vs-arduino-core/},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{lm393,
+	title        = {LM393, LM293, LM2903 – Dual Comparators – Technical Datasheet},
+	author       = {{Texas Instruments}},
+	year         = {2025},
+	url          = {https://www.ti.com/product/LM393},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{SRD05_datasheet,
+	title        = {SRD-05VDC-SL-C – Relay Module Datasheet},
+	author       = {{Songle Relay}},
+	year         = {2015},
+	url          = {https://www.circuitbasics.com/wp-content/uploads/2015/11/SRD-05VDC-SL-C-Datasheet.pdf},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@manual{opto22_ssr,
+	title        = {Solid-State Relays (SSRs) Data Sheet – Z Series},
+	author       = {{Opto 22}},
+	year         = {2024},
+	url          = {https://documents.opto22.com/0859_Solid_State_Relays_data_sheet.pdf},
+	note         = {Zugriff am 15.04.2025}
+}
+
+@online{wolles_mosfet,
+	author       = {Wolle},
+	title        = {Der MOSFET als Schalter},
+	year         = {2022},
+	url          = {https://wolles-elektronikkiste.de/der-mosfet-als-schalter},
+	note         = {Zugriff am 15.04.2025}
 }
